--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,14 @@
     background-color: #F6F6F6;
 }
 
+.gap-22 {
+    gap: 22px;
+}
+
+.gap-30 {
+    gap: 30px;
+}
+
 .overflow {
     overflow: hidden;
 }
@@ -46,12 +54,6 @@
     color: #000000;
     overflow: hidden;
 }
-
-/* hr {
-    border: 1px solid #000000;
-    opacity: 10%;
-    margin: 13px 25px 25px 0px;
-} */
 
 .para {
     font-family: "Inter", sans-serif;
@@ -90,7 +92,7 @@
 }
 
 .button {
-    padding: 13px 22px;
+    padding: 13px 0px;
     font-family: "Inter", sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -104,7 +106,7 @@
 
 .button.active {
     color: #000000;
-    font-weight: bold;
+    font-weight: normal;
     border-bottom: 2px solid #007BFF;
 }
 
